--- a/Web/Views/Feedback/Index.cshtml
+++ b/Web/Views/Feedback/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Feedback";
     Layout = "~/Views/Layout/_Layout.cshtml";
 }
 
-
+@section pageHeader{
+    <ul class="breadcrumbs">
+        <li class="nav-home"><a href="/"><i class="flaticon-home"></i></a></li>
+        <li class="separator"><i class="flaticon-right-arrow"></i></li>
+        <li class="nav-item"><a href="#">@ViewData["Title"]</a></li>
+    </ul>
+}
 <div class="row">
 
     <div class="col-md-12">
