--- a/Web/Views/Employee/Index.cshtml
+++ b/Web/Views/Employee/Index.cshtml
@@ -1,8 +1,90 @@
 ﻿
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Employee";
     Layout = "~/Views/Layout/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+@section pageHeader{
+    <ul class="breadcrumbs">
+        <li class="nav-home"><a href="/"><i class="flaticon-home"></i></a></li>
+        <li class="separator"><i class="flaticon-right-arrow"></i></li>
+        <li class="nav-item"><a href="/employee">@ViewData["Title"]</a></li>
+        <li class="separator"><i class="flaticon-right-arrow"></i></li>
+        <li class="nav-item"><a href="#">Feedback</a></li>
+    </ul>
+}
 
+
+<div class="row">
+    <div class="col-md-12">
+        <div class="card card-with-nav">
+            <div class="card-header">
+                <div class="row row-nav-line">
+                    <ul class="nav nav-tabs nav-line nav-color-secondary" role="tablist">
+                        <li class="nav-item"> <a class="nav-link active show" data-toggle="tab" href="#home" role="tab" aria-selected="true">Feedback</a> </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card-body">
+                <div class="row mt-3">
+                    <div class="col-md-6">
+                        <div class="form-group form-group-default">
+                            <label>Name</label>
+                            <input type="text" class="form-control" name="name" placeholder="Name" value="Hizrian">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group form-group-default">
+                            <label>Email</label>
+                            <input type="email" class="form-control" name="email" placeholder="Name" value="hello@example.com">
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-4">
+                        <div class="form-group form-group-default">
+                            <label>Birth Date</label>
+                            <input type="text" class="form-control" id="datepicker" name="datepicker" value="03/21/1998" placeholder="Birth Date">
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group form-group-default">
+                            <label>Gender</label>
+                            <select class="form-control" id="gender">
+                                <option>Male</option>
+                                <option>Female</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="form-group form-group-default">
+                            <label>Phone</label>
+                            <input type="text" class="form-control" value="+62008765678" name="phone" placeholder="Phone">
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        <div class="form-group form-group-default">
+                            <label>Address</label>
+                            <input type="text" class="form-control" value="st Merdeka Putih, Jakarta Indonesia" name="address" placeholder="Address">
+                        </div>
+                    </div>
+                </div>
+                <div class="row mt-3 mb-1">
+                    <div class="col-md-12">
+                        <div class="form-group form-group-default">
+                            <label>About Me</label>
+                            <textarea class="form-control" name="about" placeholder="About Me" rows="3">A man who hates loneliness</textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-right mt-3 mb-3">
+                    <button type="button" id="add" class="btn btn-success btn-border btn-round" onclick="Save();">Save</button>
+                    <button type="button" id="update" class="btn btn-warning btn-border btn-round" onclick="Update();">Update</button>
+                    <button type="reset" class="btn btn-secondary btn-border btn-round" onclick="ClearScreen();">Reset</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
