--- a/Web/Views/Feedback/Index.cshtml
+++ b/Web/Views/Feedback/Index.cshtml
@@ -106,7 +106,7 @@
                                 <th>Question</th>
                                 <th>Feedback</th>
                                 <th>Rate</th>
-                                <th>Action</th>
+                                <th width="15%">Action</th>
                             </tr>
                         </thead>
 
