--- a/Web/Views/Trainer/Index.cshtml
+++ b/Web/Views/Trainer/Index.cshtml
@@ -19,7 +19,6 @@
         <div class="card ">
             <div class="card-header">
                 <h5 class="card-title">Add Question</h5>
-
             </div>
             <div class="card-body">
                 <div class="row mt-3">
@@ -67,11 +66,11 @@
             <div class="card-header">
                 <div class="d-flex flex-row align-content-between justify-content-between">
                     <h4 class="card-title">Add Row</h4>
-                    <div data-toggle="modal" data-target="#myModal" onclick="ClearScreen();">
+                    @*<div data-toggle="modal" data-target="#myModal" onclick="ClearScreen();">
                         <button class="btn btn-secondary btn-border btn-round" data-toggle="tooltip" data-placement="top" title="" data-original-title="Add">
                             <i class="fa fa-plus"></i>
                         </button>
-                    </div>
+                    </div>*@
                 </div>
             </div>
             <div class="card-body">
