--- a/Web/Views/Layout/_Layout.cshtml
+++ b/Web/Views/Layout/_Layout.cshtml
@@ -230,6 +230,13 @@
                                     <p>View Feedback</p>
                                 </a>
                             </li>
+
+                            <li class="nav-item">
+                                <a href="/employee">
+                                    <i class="far fa-comments"></i>
+                                    <p>Add Feedback</p>
+                                </a>
+                            </li>
                         }
                         else
                         {
@@ -295,9 +302,6 @@
     <script src="~/js/amcharts4/charts.js"></script>
     <script src="~/js/amcharts4/themes/animated.js"></script>
 
-    <!-- Azzara JS -->
-    <script src="~/js/ready.min.js"></script>
-
     <!-- Plugin dataTable -->
     <script src="~/js/dataTable-plugin/dataTables.buttons.min.js"></script>
     <script src="~/js/dataTable-plugin/buttons.flash.min.js"></script>
@@ -307,6 +311,9 @@
     <script src="~/js/dataTable-plugin/buttons.html5.min.js"></script>
     <script src="~/js/dataTable-plugin/buttons.print.min.js"></script>
 
+    <!-- Azzara JS -->
+    <script src="~/js/ready.min.js"></script>
     @RenderSection("Scripts", required: false)
+
 </body>
 </html>
