--- a/Web/Views/Dashboard/Index.cshtml
+++ b/Web/Views/Dashboard/Index.cshtml
@@ -138,9 +138,9 @@
                                 <table class="display table table-striped table-hover" id="Logs">
                                     <thead>
                                         <tr>
-                                            <th>Response</th>
-                                            <th>Email</th>
                                             <th>Date & Time</th>
+                                            <th>Response</th>
+                                            <th>Name</th>
                                         </tr>
                                     </thead>
                                 </table>
